--- a/configs/haproxy.cfg
+++ b/configs/haproxy.cfg
@@ -46,7 +46,7 @@ frontend https-in
 #   rspadd Strict-Transport-Security:\ max-age=31536000;\ includeSubdomains;\ preload
 #   rspadd X-Frame-Options:\ DENY
     rspadd X-Frame-Options:\ SAMEORIGIN # to prevent some errors
-    bind *:443 ssl crt /etc/ssl/wp-bullet.pem ciphers AES128+EECDH:AES128+EDH force-tlsv12 no-sslv3
+    bind *:443 ssl crt /etc/ssl/wpbullet.pem ciphers AES128+EECDH:AES128+EDH force-tlsv12 no-sslv3
     default_backend wpbullet.com
 
 backend wpbullet.com
