--- a/configs/haproxy.cfg
+++ b/configs/haproxy.cfg
@@ -45,10 +45,10 @@ frontend https-in
 #   redirect scheme https code 301 if !{ ssl_fc }
 #   rspadd Strict-Transport-Security:\ max-age=31536000;\ includeSubdomains;\ preload
 #   rspadd X-Frame-Options:\ DENY
-    rspadd X-Frame-Options:\ SAMEORIGIN # to prevent some errors
-    bind *:443 ssl crt /etc/ssl/wpbullet.pem ciphers AES128+EECDH:AES128+EDH force-tlsv12 no-sslv3
-    default_backend wpbullet.com
+    rspadd X-Frame-Options:\ SAMEORIGIN
+    bind *:443 ssl crt /etc/ssl/wp-bullet.pem ciphers AES128+EECDH:AES128+EDH force-tlsv12 no-sslv3
+    default_backend wp-bullet.com
 
-backend wpbullet.com
+backend wp-bullet.com
  mode http
  server varnish 127.0.0.1:80
