--- a/configs/my.cnf
+++ b/configs/my.cnf
@@ -107,7 +107,8 @@ max_binlog_size         = 100M
 # ssl-ca=/etc/mysql/cacert.pem
 # ssl-cert=/etc/mysql/server-cert.pem
 # ssl-key=/etc/mysql/server-key.pem
-
+innodb_buffer_pool_instances = 1
+innodb_buffer_pool_size = 79M
 
 
 [mysqldump]
@@ -120,6 +121,7 @@ max_allowed_packet	= 16M
 
 [isamchk]
 key_buffer		= 16M
+key_buffer_size         = 7M
 
 #
 # * IMPORTANT: Additional settings that can override those from this file!
